--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ali</groupId>
-    <artifactId>asr-webapp</artifactId>
+    <artifactId>or-consumables-webapp</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>asrwebapp</name>
     <packaging>war</packaging>
